--- a/src/components/CardGrid.css
+++ b/src/components/CardGrid.css
@@ -1,11 +1,11 @@
 /* Grid.css */
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Create 4 equal-height rows */
-    gap: 20px; /* Space between rows */
-  }
-  
-  .grid-item {
+    grid-template-columns: repeat(4, 1fr); /* Keep 4 equal-height columns */
+    gap: 20px; /* Space between the grid items */
+}
+
+.grid-item {
     border-radius: 10px;
     background-color: #F5F5F7;
     padding: 10px;
@@ -13,55 +13,63 @@
     text-align: center;
     font-size: 18px;
     color: #333;
-  }
+    min-height: 350px; /* Set minimum height to avoid tightening */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Ensure footer stays at the bottom */
+}
 
-  .grid-item img {
+.grid-item img {
     width: 100%;
+    height: 150px; /* Fix the height to avoid shrinking */
+    object-fit: cover; /* Make sure the image fits inside the box */
     border-radius: 10px;
-  }
+}
 
-  .grid-item .card-title {
+.grid-item .card-title {
     font-size: 16px;
     font-weight: 600;
     text-align: left;
-  }
+    margin: 10px 0; /* Add margin to space out title */
+}
 
-  .grid-item .card-description {
+.grid-item .card-description {
     font-size: 13px;
     text-align: left;
     color: #373737;
-  }
+    margin-bottom: 10px; /* Add margin for spacing */
+}
 
-  .grid-item .icon {
+.grid-item .icon {
     font-size: 13px;
     color: #BDBDBD;
-  }
+}
 
-  .grid-item .icon .svg {
+.grid-item .icon .svg {
     color: #BDBDBD;
-  }
+}
 
-  .grid-item .icon span {
+.grid-item .icon span {
     color: #080808;
-  }
+}
 
-  .grid-item .icon-container {
+.grid-item .icon-container {
     display: flex;
     gap: 10px;
     justify-content: space-between;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 10px;
     flex-wrap: wrap;
-  }
+}
 
-  .grid-item .card-footer {
+.grid-item .card-footer {
     display: flex;
     gap: 10px;
     justify-content: space-between;
     align-items: center;
-  }
+    margin-top: auto; /* Push footer to the bottom */
+}
 
-  .grid-item .card-button {
+.grid-item .card-button {
     display: inline-block;
     padding: 10px 20px;
     background-color: black;
@@ -70,8 +78,9 @@
     border-radius: 10px;
     font-size: 14px;
     transition: background-color 0.3s, transform 0.1s;
-  }
-  
-  .grid-item .card-button:hover {
+}
+
+.grid-item .card-button:hover {
     background-color: #333; /* Darker shade on hover */
-  }
+}
+
