SignUp image changed url

--- a/src/pages/SignupInstructor.css
+++ b/src/pages/SignupInstructor.css
@@ -18,7 +18,7 @@
 
 .signup-din-left {
   flex: 1;
-  background-image: url(C:\Users\online\Downloads\Eurkea\src\assets\eurekalogo.JPG);
+  background-image: url(../assets/eurekalogo.JPG);
   background-size: cover;
 }
 
