--- a/src/pages/CourseDetails.css
+++ b/src/pages/CourseDetails.css
@@ -109,5 +109,95 @@
 
 .h1-course-details{
   margin-top: 0px;
+  margin-bottom: 10px;
   font-size: 38px;
+}
+
+.p-description-details{
+  color: #777;
+  margin-top: 3px;
+}
+
+.free-course-content{
+}
+
+.test-div-video {
+  width: 100%;
+  height: 100%;
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;  /* Centers horizontally */
+  align-items: center;      /* Centers vertically */
+}
+
+.test-video {
+  max-width: 100%;
+  max-height: 100%;
+}
+.title-course-details{
+  margin-top: 50px;
+}
+
+.hr-breaker{
+  margin: 40px 0;
+  border-color: #f5f5f55d;
+}
+.list-what{
+list-style: none;
+padding: 5px 0px;
+}
+
+.ul-list-coursee,
+.topics ul {
+  display: grid;                  /* Use grid for a two-column layout */
+  grid-template-columns: repeat(2, 1fr);  /* Define two equal columns */
+  gap: 5px;                     /* Add space between items */
+  padding: 0;                    /* Remove default padding */
+  margin: 0;                     /* Remove default margin */
+  list-style-type: none;         /* Remove bullet points */
+}
+
+.list-what {
+  display: flex;                 /* Use flex for individual list items */
+  align-items: center;           /* Center items vertically */
+}
+.favicon{
+  margin-right: 10px;
+}
+
+.test-lesson{
+  padding: 10px;
+}
+
+.course-info-course-details {
+  display: grid;                          /* Use grid layout */
+  grid-template-columns: repeat(6, 1fr); /* Define three equal columns */
+  padding: 10px 0px;
+}
+
+.course-rating {
+  grid-column: 1;                         /* Place rating in the first column */
+}
+
+.course-meta {
+  display: flex;                          /* Use flexbox for meta information */
+  flex-direction: column;                 /* Stack meta info vertically */
+}
+
+.course-meta p {
+  margin: 0;                              /* Remove default margin */
+}
+
+/* Optional: Add a responsive breakpoint for smaller screens */
+@media (max-width: 600px) {
+  .course-info {
+    grid-template-columns: 1fr;          /* Switch to a single column on small screens */
+  }
+}
+.test-review{
+color: #666;
+}
+.icon-course-d{
+margin-left: -18px;
+margin-right: 5px;
 }
