--- a/src/pages/Landing1.css
+++ b/src/pages/Landing1.css
@@ -1608,7 +1608,7 @@ padding-left: 14px;
   box-sizing: border-box;
 }
 .landing-1 .image-17 {
-  background: url('assets/images/Image17.png') 100% / cover no-repeat;
+  background: url('http://res.cloudinary.com/dkulnjbr2/image/upload/v1729921352/npami57qcqdfg5vq5zyy.png') 100% / cover no-repeat;
   margin-right: 133px;
   width: 350px;
   height: 350px;
