--- a/src/pages/Landing1.css
+++ b/src/pages/Landing1.css
@@ -406,7 +406,6 @@
   
 }
 .supporting-text-3{
-padding-left: 14px;
 }
 .landing-1 .imgacademy-10 {
   border-radius: 10px;
@@ -1978,7 +1977,7 @@ padding-left: 14px;
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
   padding: 40.3px 37px 46.6px 40.3px;
   width: 800px;
   box-sizing: border-box;
